--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,22 +8,21 @@
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
     <div class="jumbotron">
-        <h1>HELLO SHOP</h1>
-        <p class="lead">회원 기능</p>
+        <h1>MathConceptGraph</h1>
+        <div class="container">
+        <p class="lead">노드 기능</p>
         <p>
-            <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
-            <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a>
+            <a class="btn btn-lg btn-secondary" href="/nodes/new">노드 추가</a>
+            <a class="btn btn-lg btn-secondary" href="/nodes">노드 목록</a>
         </p>
-        <p class="lead">상품 기능</p>
+        </div>
+        <div class="container">
+        <p class="lead">엣지 기능</p>
         <p>
-            <a class="btn btn-lg btn-dark" href="/items/new">상품 등록</a>
-            <a class="btn btn-lg btn-dark" href="/items">상품 목록</a>
+            <a class="btn btn-lg btn-dark" href="/items/new">엣지 등록</a>
+            <a class="btn btn-lg btn-dark" href="/items">엣지 목록</a>
         </p>
-        <p class="lead">주문 기능</p>
-        <p>
-            <a class="btn btn-lg btn-info" href="/order">상품 주문</a>
-            <a class="btn btn-lg btn-info" href="/orders">주문 내역</a>
-        </p>
+        </div>
     </div>
     <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
